--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,9 +1,60 @@
 li{
 	font-size: large;
 }
+
 .log{
   color: gray;
   font-size: 90%;
   margin: 5px;
   text-align: center;
+}
+
+.fullWidth {
+width:100%;
+margin-left:auto;
+margin-right:auto;
+max-width:initial;
+}
+
+#loginChat {
+position:absolute;
+left:50%;
+top:50%;
+transform:translate(-50%,-50%);
+-webkit-transform:translate(-50%,-50%);
+-o-transform:translate(-50%,-50%);
+-ms-transform:translate(-50%,-50%);
+}
+
+.panel-conversacion {
+display:block;
+height:80%;
+overflow:hidden;
+white-space:pre-line;
+overflow-y:auto;
+max-height:80%;
+width:98%;
+background-color:#FFF;
+margin-top:1%;
+margin-left:1%;
+margin-right:1%;
+}
+
+.panel-inputmsj {
+width:98%;
+height:10%;
+margin:1%;
+}
+
+.lab {
+color:#FFF;
+font-size:100%;
+}
+
+.tituloLogin{
+	color: white;
+}
+
+#entradaNombre{
+	font-size: 2rem;
 }
